# onewAy

./: .gitignore  GEMINI.md  README.md  onewAy_prototype_2_checklist.md
client/: Cargo.toml  SECRET
client/modules/test_module/: config.yaml
client/modules/test_module/dev/src/: main.rs
client/src/: api_client.rs  config.rs  lib.rs  logger.rs  main.rs  module_manager.rs  system_info.rs  update.rs  update_info.rs  utils.rs
client/src/http/: api_client.rs  api_client_bak.rs  auth.rs  mod.rs  modules.rs  websockets.rs  websockets_bak.rs
client/src/schemas/: auth.rs  mod.rs  module_bucket.rs  modules.rs  update_info.rs  websockets.rs
client/tests/: endpoint_tests.rs  http_client_tests.rs  integration.rs  unit_error.rs
docker/: dev.Dockerfile  docker-compose.public.yml  docker-compose.yml  manage-services.sh  start-services.sh
docs/: BACKEND_SETTINGS.md  DOCKER.md  MODULES.md  MODULE_CONFIG.md
modules/shell/: config.yaml
modules/shell/binaries/linux/: shell
modules/shell/binaries/mac/: shell
modules/shell/src/: main.rs
modules/telemetry/: Cargo.toml  config.yaml
modules/telemetry/binaries/mac/: telemetry
modules/telemetry/src/: main.rs
modules/test_module/: Cargo.toml  config.yaml  test_module
ops/docker/: dev.Dockerfile  docker-compose.yml  start-services.sh
scripts/: start_dev_container.sh
server/backend/: config.toml  config.toml.example  configure_admin.py  pyproject.toml  pytest.ini  requirements.txt
server/backend/alembic/: env.py
server/backend/alembic/versions/: 03ae50c160db_refactored_ip_address_from_string_to_.py  0d86684db642_initial_schema.py  1c47a456fbe1_change_avatar_to_avatar_path.py  20241022_add_client_platform.py  212942fade34_add_users_table_properly.py  295fcbcd1abb_initial_schema.py  (+22 more)
server/backend/app/: dependencies.py  logger.py  main.py  settings.py  utils.py
server/backend/tests/: conftest.py  pytest.ini  requirements-dev.txt
server/frontend/: eslint.config.js  index.html  jest.config.cjs  jest.setup.js  package-lock.json  package.json  tailwind.config.js
server/frontend/src/: App.tsx  apiClient.ts  main.tsx  utils.ts
(+125 files in other folders)
