[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
once_cell = "1.21.3"
crossbeam-channel = "0.5.15"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "rt"] }
reqwest = { version = "0.12.23", features = ["json", "cookies", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.99"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }