[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
once_cell = "1.21.3"
crossbeam-channel = "0.5.15"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "rt", "fs", "process", "io-util"] }
reqwest = { version = "0.12.23", features = ["json", "cookies", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml = "0.9.34"
anyhow = "1.0.99"
hostname = "0.4.1"
tokio-tungstenite = "*"
url = "2.5.4"
futures-util = "0.3.31"
tungstenite = "0.27.0"
toml = "0.9.7"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
