[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
once_cell = "1.21.3"
crossbeam-channel = "0.5.15"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "rt", "fs", "process", "io-util"] }
reqwest = { version = "0.12.23", default-features = false, features = ["json", "cookies", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml = "0.9.34"
anyhow = "1.0.99"
hostname = "0.4.1"
tokio-tungstenite = { version = "0.26", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
url = "2.5.4"
futures-util = "0.3.31"
toml = "0.9.7"
thiserror = "2.0.15"
colored = "3.0.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
uuid = { version = "1.11.0", features = ["v4"] }
serial_test = "3.1.0"
